extends Control

@onready var Loop = $Loop
@onready var Setup = $Setup
@onready var explicacion = $Panel2/Explicacion # Asume que es un Label o RichTextLabel

# --- Propiedades de Flotaci贸n ---
@export var amplitud: float = 13.0
@export var velocidad: float = 0.9

# Guardar谩n las posiciones Y originales para centrar el movimiento
var setup_pos_inicial_y: float = 0.0
var loop_pos_inicial_y: float = 0.0

# --- Textos de Explicaci贸n ---
const TEXTO_SETUP = "Esta funci贸n se ejecuta SOLO UNA VEZ al iniciar la placa Arduino.

Su prop贸sito es la Configuraci贸n Inicial. Aqu铆 se definen los pines que ser谩n usados como entradas o salidas (con el comando pinMode) y se inicializan las conexiones (como la comunicaci贸n serial)."
const TEXTO_LOOP = "Esta funci贸n se ejecuta CONTINUAMENTE en un ciclo infinito despu茅s de que setup() termina.

Es el Motor de tu programa. Aqu铆 se escribe la l贸gica central del proyecto: leer sensores, tomar decisiones (if), y ejecutar acciones de forma repetitiva."

func _ready():
    # 1. Guardar las posiciones Y originales
    setup_pos_inicial_y = Setup.position.y
    loop_pos_inicial_y = Loop.position.y
    
    # Opcional: Mostrar una explicaci贸n inicial o dejarlo vac铆o
    explicacion.text = "Haz clic en SETUP o LOOP para ver su funci贸n."
    
    # Aseg煤rate de que las se帽ales de los botones est茅n conectadas correctamente.
    # Si tus paneles son Controles simples, debes tener un Button dentro de ellos
    # que es el que emite la se帽al. Si los paneles son los botones, ignora esto.

func _process(delta: float):
    var tiempo = Time.get_ticks_msec() / 1000.0

    # --- Movimiento vertical (flotaci贸n) ---
    var desplazamiento = sin(tiempo * velocidad) * amplitud
    Setup.position.y = setup_pos_inicial_y + desplazamiento
    Loop.position.y = loop_pos_inicial_y - desplazamiento

    # --- Inclinaci贸n suave (rotaci贸n) ---
    var inclinacion = sin(tiempo * (velocidad * 0.7)) * 6.0  # grados
    Setup.rotation_degrees = inclinacion
    Loop.rotation_degrees = -inclinacion



# ======================================================
#  HANDLERS DE BOTONES
# ======================================================

func _on_button_setup_pressed() -> void:
    # Muestra la explicaci贸n de SETUP
    explicacion.text = TEXTO_SETUP

func _on_button_loop_pressed() -> void:
    # Muestra la explicaci贸n de LOOP
    explicacion.text = TEXTO_LOOP
